# skillbox

./: .idea,txt.swp  .main.cpp.swp  .replit  :q  CMakeLists.txt  HowToGit.txt  Makefile  Questions.txt  QuiestionToTeacher.txt  cmakerun.sh  commit  commit.sh  create_river.cpp  data.txt  git_config.sh  idea  main  main.cpp  main_display.cpp  payment.txt  push.sh  pushtogit.sh  q1  ra1  register  replit.nix  river.txt  sbook  skillbox_pushtogit.sh  surgery.cpp  surgery.h  task1.cpp  test  test.cpp
.cache/replit/: __replit_disk_meta.json
.ccls-cache/@@home@runner@CMake/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@char_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@charconv.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@concept_check.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cpp_type_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_forced.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_init_exception.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_defines.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception_ptr.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functexcept.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@functional_hash.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@hash_bytes.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ios_base.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@istream.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_classes.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@locale_facets.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@localefwd.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@memoryfwd.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@move.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@nested_exception.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@ostream.tcc.blob  (+147 more)
13_Tasks/: lection13_tasks.cpp  task2.cpp
16_1/: main.cpp
16_2/: main.cpp
16_task4/: main.cpp
16_task5/: main.cpp
1_Banket_table/: CMakeLists.txt  main.cpp
INCLUDE/: central_processor.h  computer.h  graphic_card.h  hard_drive.h  keyboard.h  ram.h  raw.h
Qt/: CMakeLists.txt  main.cpp
SOURCE/: CMakeLists.txt  central_processor.cpp  computer.cpp  graphic_card.cpp  hard_drive.cpp  keyboard.cpp  ram.cpp
Tasks/: Task2.cpp
googletest/: CMakeCache.txt  Makefile  cmake_install.cmake
header/: COLORFUL_TEMPERATURE.h  HEATING_PIPE_WATER.h  LIGHTS_OUTSIDE.h
include/: task1.h
minecraft/: CMakeLists.txt  main.cpp
ship_battle/: Makefile  list.txt  main  main.cpp
snake/: CMakeLists.txt  snake.cpp
source/: CMakeLists.txt  COLORFUL_TEMPERATURE  CONDITIONER  CONDITIONER.h  HEATERS  HEATERS.cpp  HEATERS.h  LIGHTS_OUTSIDE.cpp  WATER_PIPE_HEATING.cpp  output.cpp  output.h
source/binary_sequences/: CMakeLists.txt  binary_sequences.cpp
source/display/: CMakeLists.txt  containers.cpp  containers.h
source/input/: CMakeLists.txt  standart_type.cpp  standart_type.h
source/sort_functions/: CMakeLists.txt  base_functions.cpp  base_functions.h  heap_sort.cpp  insert_sort.cpp  merge_sort.cpp  merge_sort.h
source/test/: CMakeLists.txt  bricks.cpp  bricks.h  create_permutations.h  create_test_cases.cpp  massive_cases.txt  run_test_cases.cpp  test_cases.cpp  test_cases.h
source/test/sort_functions/: CMakeLists.txt  bubble_sort.cpp  merge_sort.cpp  quick_sort.cpp
source/test/test_sort/: test_heap_sort.cpp  test_insert_sort.cpp  test_insert_sort.h  test_merge_sort.cpp  test_merge_sort.h  test_quick_sort.cpp  test_selection_sort.cpp
src/: CMakeLists.txt  main.cpp  task1.cpp
task1_directory/: CMakeLists.txt  functions.cpp
test/: Makefile
test_abstract/: Makefile  functions.cpp  functions.h  input.txt  input1.txt  test  test.cpp  test_framework.cpp  test_framework.h
(+372 files in other folders)
