cmake_minimum_required(VERSION 3.10) 



add_library(sort_functions_libraries 			 										bubble_sort.cpp
										insert_sort.cpp 
										selection_sort.cpp												merge_sort.cpp
										quick_sort.cpp
										heap_sort.cpp
										base_functions.cpp

)  #создание статической библиотеки

